--- a/startpage.html
+++ b/startpage.html
@@ -1,17 +1,19 @@
 <html>
   <head>
     <title>My very first page</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <body>
+    <script src="js/bootstrap.min.js"></script>
     <h1>Code States</h1>
     <ul>
-    <li>Slack (코드스테이츠 메신저(?))<br><a href="http://codestates-pre.slack.com/" target=_blank>http://codestates-pre.slack.com/</a></li><br/>
-    <li>소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li><br/>
-    <li>런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li><br/>
-    <li>코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li><br/>
-    <li>깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li><br/>
-    <li>Zoom<br><a href="https://zoom.us/"" target=_blank>https://zoom.us/</a></li><br/>
+      <li>Slack (코드스테이츠 메신저(?))<br><a href="http://codestates-pre.slack.com/" target=_blank>http://codestates-pre.slack.com/</a></li>
+      <li>소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li>
+      <li>런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li>
+      <li>코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li>
+      <li>깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li>
+      <li>Zoom<br><a href="https://zoom.us/"" target=_blank>https://zoom.us/</a></li>
     </ul>
   </body>
 </html>
