--- a/startpage.html
+++ b/startpage.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <script src="js/bootstrap.min.js"></script>
-    <h1>Code States</h1>
+    <div class="page-header">
+     <h1>Code States <small>모두들 화이팅 *^^*</small></h1>
+    </div>
     <ul class="list-group">
       <li class="list-group-item">Slack (코드스테이츠 메신저(?))<br><a href="http://codestates-pre.slack.com/" target=_blank>http://codestates-pre.slack.com/</a></li>
       <li class="list-group-item">소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li>
