--- a/startpage.html
+++ b/startpage.html
@@ -9,11 +9,11 @@
      <h1>Code States <small>모두들 화이팅 *^^*</small></h1>
     </div>
     <ul class="list-group">
-      <li class="list-group-item">Slack (코드스테이츠 메신저(?))<br><a href="http://codestates-pre.slack.com/" target=_blank>http://codestates-pre.slack.com/</a></li>
-      <li class="list-group-item">소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li>
-      <li class="list-group-item">런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li>
-      <li class="list-group-item">코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li>
-      <li class="list-group-item">깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li>
+      <li class="list-group-item">Slack (코드스테이츠 메신저(?))<br><a href="http://codestates-pre.slack.com/" target=_blank>http://codestates-pre.slack.com/</a></li><br>
+      <li class="list-group-item">소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li><br>
+      <li class="list-group-item">런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li><br>
+      <li class="list-group-item">코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li><br>
+      <li class="list-group-item">깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li><br>
       <li class="list-group-item">Zoom<br><a href="https://zoom.us/"" target=_blank>https://zoom.us/</a></li>
     </ul>
     <script src="js/bootstrap.min.js"></script>
