--- a/startpage.html
+++ b/startpage.html
@@ -16,6 +16,18 @@
       <li class="list-group-item">깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li><br>
       <li class="list-group-item">Zoom<br><a href="https://zoom.us/"" target=_blank>https://zoom.us/</a></li>
     </ul>
+    <form>
+        <fieldset>
+          <legend>Legend</legend>
+          <label>Label name</label>
+          <input type="text" placeholder="Type something…">
+          <span class="help-block">Example block-level help text here.</span>
+          <label class="checkbox">
+            <input type="checkbox"> Check me out
+          </label>
+          <button type="submit" class="btn">Submit</button>
+        </fieldset>
+    </form>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
