--- a/startpage.html
+++ b/startpage.html
@@ -28,6 +28,7 @@
           <button type="submit" class="btn">Submit</button>
         </fieldset>
     </form>
+    <script src="https://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
