--- a/startpage.html
+++ b/startpage.html
@@ -1,34 +1,19 @@
 <html>
   <head>
     <title>My very first page</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <div class="page-header">
-     <h1>Code States <small>모두들 화이팅 *^^*</small></h1>
+    <div>
+     <h1>Code States</h1>
     </div>
-    <ul class="list-group">
-      <li class="list-group-item">Slack (코드스테이츠 메신저(?))<br><a href="http://codestates-pre.slack.com/" target=_blank>http://codestates-pre.slack.com/</a></li><br>
-      <li class="list-group-item">소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li><br>
-      <li class="list-group-item">런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li><br>
-      <li class="list-group-item">코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li><br>
-      <li class="list-group-item">깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li><br>
-      <li class="list-group-item">Zoom<br><a href="https://zoom.us/"" target=_blank>https://zoom.us/</a></li>
+    <ul>
+      <li>Slack (코드스테이츠 메신저(?))<br><a href="http://codestates-pre.slack.com/" target=_blank>http://codestates-pre.slack.com/</a></li><br>
+      <li>소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li><br>
+      <li>런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li><br>
+      <li>코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li><br>
+      <li>깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li><br>
+      <li>Zoom<br><a href="https://zoom.us/" target=_blank>https://zoom.us/</a></li>
     </ul>
-    <form>
-        <fieldset>
-          <legend>Legend</legend>
-          <label>Label name</label>
-          <input type="text" placeholder="Type something…">
-          <span class="help-block">Example block-level help text here.</span>
-          <label class="checkbox">
-            <input type="checkbox"> Check me out
-          </label>
-          <button type="submit" class="btn">Submit</button>
-        </fieldset>
-    </form>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
