--- a/startpage.html
+++ b/startpage.html
@@ -12,8 +12,13 @@
       <li>소크레이티브 (라이브 세션 중 문답)<br><a href="http://b.socrative.com" target=_blank>http://b.socrative.com</a></li><br>
       <li>런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li><br>
       <li>코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li><br>
-      <li>깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk">https://github.com/codestates/pre-help-desk</a></li><br>
+      <li>깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk" target=_blank>https://github.com/codestates/pre-help-desk</a></li><br>
       <li>Zoom<br><a href="https://zoom.us/" target=_blank>https://zoom.us/</a></li>
+    </ul>
+      <h1>Reference</h1>
+    <ul>
+      <li>MDN : <a href="https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference" target=_blank>https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference</a></li>
+      <li>W3schools : <a href="https://www.w3schools.com/jsref/jsref_obj_array.asp" target=_blank>https://www.w3schools.com/jsref/jsref_obj_array.asp</a></li>
     </ul>
   </body>
 </html>
