--- a/startpage.html
+++ b/startpage.html
@@ -17,7 +17,7 @@
     </ul>
       <h1>Reference</h1>
     <ul>
-      <li>MDN : <a href="https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference" target=_blank>https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference</a></li>
+      <li>MDN : <a href="https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference" target=_blank>https://developer.mozilla.org/ko/docs/Web/JavaScript/Reference</a></li><br>
       <li>W3schools : <a href="https://www.w3schools.com/jsref/jsref_obj_array.asp" target=_blank>https://www.w3schools.com/jsref/jsref_obj_array.asp</a></li>
     </ul>
   </body>
