--- a/startpage.html
+++ b/startpage.html
@@ -2,6 +2,10 @@
   <head>
     <title>My very first page</title>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <style>
+      h1 {text-align:center;}
+      ul {text-align:center;}
+    </style>
   </head>
   <body>
     <div>
