--- a/startpage.html
+++ b/startpage.html
@@ -5,6 +5,7 @@
     <style>
       h1 {text-align:center;}
       ul {text-align:center;}
+      li {text-align:center;}
     </style>
   </head>
   <body>
