--- a/startpage.html
+++ b/startpage.html
@@ -4,8 +4,11 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <style>
       h1 {text-align:center;}
-      ul {text-align:center;}
-      li {text-align:center;}
+      ul {
+        display: table;
+        margin-left: auto;
+        margin-right: auto;
+      }
     </style>
   </head>
   <body>
