--- a/startpage.html
+++ b/startpage.html
@@ -21,6 +21,7 @@
       <li>런코 (강의 목록)<br><a href="https://learnco.codestates.com/Pre/35/" target=_blank>https://learnco.codestates.com/Pre/35/</a></li><br>
       <li>코플릿 (퀴즈)<br><a href="https://coplit.codestates.com/" target=_blank>https://coplit.codestates.com/</a></li><br>
       <li>깃허브 코드스테이츠 헬프데스크 (수강생끼리 Q&A)<br><a href="https://github.com/codestates/pre-help-desk" target=_blank>https://github.com/codestates/pre-help-desk</a></li><br>
+      <li>깃허브 코드스테이츠 Finding Pair<br><a href="https://github.com/codestates/pre-finding-pair" target=_blank>https://github.com/codestates/pre-finding-pair</a></li><br>
       <li>Zoom<br><a href="https://zoom.us/" target=_blank>https://zoom.us/</a></li>
     </ul>
       <h1>Reference</h1>
