--- a/startpage.html
+++ b/startpage.html
@@ -31,7 +31,7 @@
                     <li class="link-list-item"><a class="link" href="http://b.socrative.com">Socrative</a></li>
                     <li class="link-list-item"><a class="link" href="https://learnco.codestates.com/Pre/35/">Learnco</a></li>
                     <li class="link-list-item"><a class="link" href="https://coplit.codestates.com/">Coplit</a></li>
-                    <!-- <li class="link-list-item"><a class="link" href="#">Website 5</a></li> -->
+                    <li class="link-list-item"><a class="link" href="https://calendar.google.com/calendar/">Google Calendar</a></li>
                 </ul>
             </section>
             <section class="link-section">
